plugin/global/styles/preferences.css
#plugin-preferences-dialog {
    display: flex;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 800px;
    height: 600px;
    border-radius: 8px;
    box-shadow: 2px 2px 4px #dbdbdb, -2px -2px 4px #dbdbdb;
    flex-direction: column;
    z-index: 900;
    font-size: 14px;
}

#plugin-preferences-dialog ::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    background: transparent;
}

#plugin-preferences-dialog ::-webkit-scrollbar-track {
    border-radius: 0;
}

#plugin-preferences-dialog ::-webkit-scrollbar-thumb {
    background: #bbb;
    transition: all .2s;
    border-radius: 8px;
}

#plugin-preferences-dialog ::-webkit-scrollbar-thumb:hover {
    background-color: rgba(95, 95, 95, 0.7);
}

#plugin-preferences-dialog-content {
    flex: 1;
    display: flex;
    overflow: hidden;
    border-radius: 8px;
}

#plugin-preferences-dialog-left {
    width: 160px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    background: #eee;
}

#plugin-preferences-menu-search {
    height: 52px;
    padding: 8px 12px;
}

#plugin-preferences-menu-search input {
    height: 30px;
    top: 50%;
    transform: translate(0, -50%);
}

#plugin-preferences-menu {
    flex: 1;
    overflow: hidden auto;
    padding: 8px 12px;
}

.plugin-preferences-menu-item {
    box-sizing: border-box;
    line-height: 38px;
    padding-left: 12px;
    border-radius: 6px;
    margin-bottom: 2px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    user-select: none;
}

.plugin-preferences-menu-item:hover {
    background: rgba(77, 66, 86, 0.08);
}

.plugin-preferences-menu-item.active {
    color: #FFF;
    background: #0A84FF;
    pointer-events: none;
}

#plugin-preferences-dialog-right {
    flex: 1;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    background: #F5F5F5;
    color: rgb(65, 84, 98);
}

#plugin-preferences-dialog-title {
    height: 52px;
    line-height: 52px;
    font-size: 16px;
    font-weight: 600;
    box-sizing: border-box;
    padding-left: 18px;
    border-bottom: 1px solid rgba(150, 162, 170, 0.2);
}

#plugin-preferences-dialog-close {
    position: absolute;
    right: 0;
    margin: 8px 8px 0 0;
    background: #fe6059;
    height: 18px;
    width: 18px;
    line-height: 18px;
    border-radius: 6px;
    color: #fff;
    font-size: 20px;
    cursor: pointer;
    text-align: center;
}

#plugin-preferences-dialog-close:hover {
    background: #d70015;
    color: #fff;
}

#plugin-preferences-dialog-main {
    flex: 1;
    overflow-y: auto;
}

#plugin-preferences-dialog-form {
    box-sizing: border-box;
    width: 100%;
    padding: 18px;
}

/***** tooltip *****/
.plugin-preferences-tooltip {
    position: relative;
    display: inline-block;
    margin-left: 4px;
}

.plugin-preferences-tooltip > span:first-child {
    font-size: 12px;
    border-radius: 50%;
    border: 1px solid #98989d;
    color: #98989d;
    width: 12px;
    height: 12px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.plugin-preferences-tooltip > span:last-child {
    display: none;
    position: absolute;
    top: 30px;
    left: -50px;
    background-color: rgba(0, 0, 0, 0.65);
    color: #fff;
    padding: 8px 12px;
    z-index: 10;
    border-radius: 6px;
    width: max-content;
    line-height: 24px;
}

.plugin-preferences-tooltip > span:last-child::after {
    content: '';
    width: 0;
    height: 0;
    position: absolute;
    border-bottom: 6px solid rgba(0, 0, 0, 0.65);
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    top: -6px;
    left: 50px;
}

.plugin-preferences-tooltip:hover > span:first-child {
    border-color: #0A84FF;
    color: #0A84FF;
}

.plugin-preferences-tooltip:hover > span:last-child {
    display: block;
}

/***** form box *****/
.plugin-preferences-form-box {
    background: #FFF;
    border-radius: 8px;
    margin-bottom: 14px;
    padding: 5px 0;
}

/***** title *****/
.plugin-preferences-title {
    font-weight: bold;
    display: flex;
    align-items: center;
    height: 42px;
    line-height: 42px;
    padding-left: 10px;
}

.plugin-preferences-title > span {
    font-size: 12px;
    color: #999;
    padding-left: 8px;
}

/***** general control *****/
.plugin-preferences-control {
    display: flex;
    padding: 8px 12px;
    min-height: 24px;
    line-height: 32px;
}

.plugin-preferences-control > div:nth-child(1) {
    flex: 1;
    word-break: keep-all;
    padding-right: 12px;
    max-width: 100%;
}

.plugin-preferences-control > div:nth-child(2) {
    display: flex;
    align-items: center;
    font-size: 16px;
}

#plugin-preferences-dialog input[type="text"],
#plugin-preferences-dialog input[type="number"],
#plugin-preferences-dialog textarea {
    box-sizing: border-box;
    margin: 0;
    padding: 1px 8px;
    line-height: 2;
    list-style: none;
    position: relative;
    display: inline-block;
    border: 1px solid rgba(150, 162, 170, 0.4);
    border-radius: 4px;
    background: transparent;
    width: 100%;
}

#plugin-preferences-dialog textarea {
    resize: vertical;
}

.plugin-preferences-control[data-type="text"] > div:nth-child(2),
.plugin-preferences-control[data-type="number"] > div:nth-child(2),
.plugin-preferences-control[data-type="hotkey"] > div:nth-child(2),
.plugin-preferences-control[data-type="unit"] > div:nth-child(2),
.plugin-preferences-control[data-type="range"] > div:nth-child(2) {
    width: 200px
}

#plugin-preferences-dialog .plugin-preferences-text-input:disabled,
#plugin-preferences-dialog .plugin-preferences-number-input:disabled,
#plugin-preferences-dialog .plugin-preferences-hotkey-input:disabled,
#plugin-preferences-dialog .plugin-preferences-unit-input:disabled,
#plugin-preferences-dialog .plugin-preferences-switch-input:disabled {
    cursor: not-allowed;
}
/* ... */

